--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>RoyalUI Admin</title>
    <!-- inject:css -->
-
+   <link rel="stylesheet" href="../../assets/vendors/ti-icons/css/themify-icons.css">
+   <link rel="stylesheet" href="../../assets/vendors/base/vendor.bundle.base.css">
 </head>
 
 <body>
