Añadieron los scripts del template

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,6 +6,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>RoyalUI Admin</title>
+  <!-- inject:css -->
+  <link rel="stylesheet" href="../../assets/vendors/ti-icons/css/themify-icons.css">
+  <link rel="stylesheet" href="../../assets/vendors/base/vendor.bundle.base.css">
 </head>
 <body>
   <div class="container-scroller">
@@ -560,5 +563,13 @@
     <!-- page-body-wrapper ends -->
   </div>
 </body>
-
+<!-- plugins:js -->
+<script src="../../assets/vendors/base/vendor.bundle.base.js"></script>
+<!-- endinject -->
+<!-- inject:js -->
+<script src="../../assets/js/off-canvas.js"></script>
+<script src="../../assets/js/hoverable-collapse.js"></script>
+<script src="../../assets/js/template.js"></script>
+<script src="../../assets/js/todolist.js"></script>
+<!-- endinject -->
 </html>
