--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -73,5 +73,14 @@
     <!-- page-body-wrapper ends -->
   </div>
 </body>
-
+<!-- container-scroller -->
+  <!-- plugins:js -->
+  <script src="../../assets/vendors/base/vendor.bundle.base.js"></script>
+  <!-- endinject -->
+  <!-- inject:js -->
+  <script src="../../assets/js/off-canvas.js"></script>
+  <script src="../../assets/js/hoverable-collapse.js"></script>
+  <script src="../../assets/js/template.js"></script>
+  <script src="../../assets/js/todolist.js"></script>
+  <!-- endinject -->
 </html>
