--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,11 +14,11 @@
         <div class="row flex-grow">
           <div class="col-lg-6 d-flex align-items-center justify-content-center">
             <div class="auth-form-transparent text-left p-3">
-              <div class="brand-logo">
+              <div class="brand-logo text-center">
                 <img src="./assets/images/logo.png" alt="logo">
               </div>
-              <h3>Welcome back!</h3>
-              <h6 class="font-weight-light">Happy to see you again!</h6>
+              <h3 class="text-center">Welcome back!</h3>
+              <h6 class="font-weight-light text-center">Happy to see you again!</h6>
               <form class="pt-3">
                 <div class="form-group">
                   <label for="exampleInputEmail">User
@@ -64,9 +64,7 @@
           </div>
         </div>
       </div>
-      <!-- content-wrapper ends -->
     </div>
-    <!-- page-body-wrapper ends -->
   </div>
 </body>
 </html>
