--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -14,17 +14,26 @@
             </a>
             <div class="collapse" id="ui-basic">
                 <ul class="nav flex-column sub-menu">
-                    <li class="nav-item"> <a class="nav-link" href="pages/ui-features/buttons.html">Buttons</a></li>
-                    <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Typography</a>
-                    </li>
+                    <li class="nav-item"> <a class="nav-link" href="pages/ui-features/buttons.html">Agregar</a></li>
+                    <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Eliminar</a></li>
+                    <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Buscar</a></li>
                 </ul>
             </div>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="pages/forms/basic_elements.html">
+            <a class="nav-link" data-toggle="collapse" href="#ui-basic1" aria-expanded="false"
+                aria-controls="ui-basic1">
                 <i class="ti-layout-list-post menu-icon"></i>
                 <span class="menu-title">Libros</span>
+                <i class="menu-arrow"></i>
             </a>
+            <div class="collapse" id="ui-basic1">
+                <ul class="nav flex-column sub-menu">
+                    <li class="nav-item"> <a class="nav-link" href="pages/forms/basic_elements.html">Agregar</a></li>
+                    <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Eliminar</a></li>
+                    <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Buscar</a></li>
+                </ul>
+            </div>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="pages/charts/chartjs.html">
