--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -7,13 +7,12 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" (click)="isCollapsed = !isCollapsed"
-            [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample">>
+            <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
                 <i class="ti-palette menu-icon"></i>
                 <span class="menu-title">Alumnos</span>
                 <i class="menu-arrow"></i>
             </a>
-            <div class="collapseExample" [ngbCollapse]="isCollapsed">
+            <div class="collapse" id="ui-basic">
                 <ul class="nav flex-column sub-menu">
                     <li class="nav-item"> <a class="nav-link" href="pages/ui-features/buttons.html">Agregar</a></li>
                     <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Eliminar</a></li>
