Se agregó el servicio para el formulario de login

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -19,9 +19,9 @@
               </div>
               <h3 class="text-center">Welcome back!</h3>
               <h6 class="font-weight-light text-center">Happy to see you again!</h6>
-              <form class="pt-3">
+              <form class="pt-3" #f="ngForm" (ngSubmit)="f.form.valid && login(f)">
                 <div class="form-group">
-                  <label for="exampleInputEmail">User
+                  <label for="txtUsername">User
                   </label>
                   <div class="input-group">
                     <div class="input-group-prepend bg-transparent">
@@ -29,18 +29,18 @@
                         <i class="ti-user text-primary"></i>
                       </span>
                     </div>
-                    <input type="text" class="form-control form-control-lg border-left-0" id="exampleInputEmail" placeholder="Username">
+                    <input type="text" class="form-control form-control-lg border-left-0" id="txtUsername" placeholder="Username" name="txtUsername"  [(ngModel)]="txtUsername" requiered>
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputPassword">Password</label>
+                  <label for="txtPassword">Password</label>
                   <div class="input-group">
                     <div class="input-group-prepend bg-transparent">
                       <span class="input-group-text bg-transparent border-right-0">
                         <i class="ti-lock text-primary"></i>
                       </span>
                     </div>
-                    <input type="password" class="form-control form-control-lg border-left-0" id="exampleInputPassword" placeholder="Password">                        
+                    <input type="password" class="form-control form-control-lg border-left-0" id="txtPassword" placeholder="Password" name="txtPassword" [(ngModel)]="txtPassword" required>                        
                   </div>
                 </div>
                 <div class="my-2 d-flex justify-content-between align-items-center">
@@ -53,7 +53,7 @@
                   <a href="#" class="auth-link text-black">Forgot password?</a>
                 </div>
                 <div class="my-3">
-                  <a class="btn btn-outline-secondary btn-lg btn-block" href="../../index.html">LOGIN</a>
+                  <button type="submit" class="btn btn-outline-secondary btn-lg btn-block" >LOGIN</button>
                 </div>
                 
               </form>
