Se corrigió el direccionamiento de los links para los enlaces del sidebar

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -14,9 +14,9 @@
             </a>
             <div class="collapse" id="ui-basic">
                 <ul class="nav flex-column sub-menu">
-                    <li class="nav-item"> <a class="nav-link" href="pages/ui-features/buttons.html">Agregar</a></li>
-                    <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Eliminar</a></li>
-                    <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Buscar</a></li>
+                    <li class="nav-item"> <a routerLink="../alumnos/agregar" class="nav-link" >Agregar</a></li>
+                    <li class="nav-item"> <a routerLink="../alumnos/eliminar" class="nav-link">Eliminar</a></li>
+                    <li class="nav-item"> <a routerLink="../alumnos/mostrar" class="nav-link" >Buscar</a></li>
                 </ul>
             </div>
         </li>
@@ -29,9 +29,9 @@
             </a>
             <div class="collapse" id="ui-basic1">
                 <ul class="nav flex-column sub-menu">
-                    <li class="nav-item"> <a class="nav-link" href="pages/forms/basic_elements.html">Agregar</a></li>
-                    <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Eliminar</a></li>
-                    <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Buscar</a></li>
+                    <li class="nav-item"> <a routerLink="../libros/agregar" class="nav-link">Agregar</a></li>
+                    <li class="nav-item"> <a routerLink="../libros/eliminar" class="nav-link">Eliminar</a></li>
+                    <li class="nav-item"> <a routerLink="../libros/mostrar" class="nav-link">Buscar</a></li>
                 </ul>
             </div>
         </li>
