Dashboard and menu
Delete unnecesary nav items and change some text in the option list for the nav

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -32,7 +32,7 @@
             <div class="col-md-3 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <p class="card-title text-md-center text-xl-left">Sales</p>
+                  <p class="card-title text-md-center text-xl-left">Borrowed</p>
                   <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
                     <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">34040</h3>
                     <i class="ti-calendar icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>
@@ -44,7 +44,7 @@
             <div class="col-md-3 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <p class="card-title text-md-center text-xl-left">Revenue</p>
+                  <p class="card-title text-md-center text-xl-left">Reservations</p>
                   <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
                     <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">47033</h3>
                     <i class="ti-user icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>
@@ -56,7 +56,7 @@
             <div class="col-md-3 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <p class="card-title text-md-center text-xl-left">Downloads</p>
+                  <p class="card-title text-md-center text-xl-left">Available</p>
                   <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
                     <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">40016</h3>
                     <i class="ti-agenda icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>
@@ -68,7 +68,7 @@
             <div class="col-md-3 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <p class="card-title text-md-center text-xl-left">Returns</p>
+                  <p class="card-title text-md-center text-xl-left">Delayed</p>
                   <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
                     <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">61344</h3>
                     <i class="ti-layers-alt icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>
@@ -82,8 +82,8 @@
             <div class="col-md-6 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <p class="card-title">Sales details</p>
-                  <p class="text-muted font-weight-light">Received overcame oh sensible so at an. Formed do change merely to county it. Am separate contempt domestic to to oh. On relation my so addition branched.</p>
+                  <p class="card-title">Borrowed books per month</p>
+                  <p class="text-muted font-weight-light">It is shown the most popular categories during a time interval.</p>
                   <div id="sales-legend" class="chartjs-legend mt-4 mb-2"></div>
                   <canvas id="sales-chart"></canvas>
                 </div>
@@ -108,19 +108,19 @@
             <div class="col-md-6 grid-margin stretch-card">
               <div class="card border-bottom-0">
                 <div class="card-body pb-0">
-                  <p class="card-title">Purchases</p>
-                  <p class="text-muted font-weight-light">The argument in favor of using filler text goes something like this: If you use real content in the design process, anytime you reach a review</p>
+                  <p class="card-title">General</p>
+                  <p class="text-muted font-weight-light">General aspects related with the library's management.</p>
                   <div class="d-flex flex-wrap mb-5">
                     <div class="mr-5 mt-3">
-                      <p class="text-muted">Status</p>
+                      <p class="text-muted">New Users</p>
                       <h3>362</h3>
                     </div>
                     <div class="mr-5 mt-3">
-                      <p class="text-muted">New users</p>
+                      <p class="text-muted">Borrows</p>
                       <h3>187</h3>
                     </div>
                     <div class="mr-5 mt-3">
-                      <p class="text-muted">Chats</p>
+                      <p class="text-muted">Reservations</p>
                       <h3>524</h3>
                     </div>
                     <div class="mt-3">
@@ -137,7 +137,7 @@
             <div class="col-md-7 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <p class="card-title mb-0">Top Products</p>
+                  <p class="card-title mb-0">Lastest borrows and returns</p>
                   <div class="table-responsive">
                     <table class="table table-hover">
                       <thead>
@@ -201,7 +201,7 @@
 												<div class="form-check form-check-flat">
 													<label class="form-check-label">
 														<input class="checkbox" type="checkbox">
-														Become A Travel Pro In One Easy Lesson
+														Update science books inventary
 													</label>
 												</div>
 												<i class="remove ti-trash"></i>
@@ -210,7 +210,7 @@
 												<div class="form-check form-check-flat">
 													<label class="form-check-label">
 														<input class="checkbox" type="checkbox" checked>
-														See The Unmatched Beauty Of The Great Lakes
+														Change place of history books
 													</label>
 												</div>
 												<i class="remove ti-trash"></i>
@@ -219,7 +219,7 @@
 												<div class="form-check form-check-flat">
 													<label class="form-check-label">
 														<input class="checkbox" type="checkbox">
-														Copper Canyon
+														Install new inmobilary
 													</label>
 												</div>
 												<i class="remove ti-trash"></i>
@@ -228,7 +228,7 @@
 												<div class="form-check form-check-flat">
 													<label class="form-check-label">
 														<input class="checkbox" type="checkbox" checked>
-														Top Things To See During A Holiday In Hong Kong
+														Make a poll for new required books
 													</label>
 												</div>
 												<i class="remove ti-trash"></i>
@@ -237,7 +237,7 @@
 												<div class="form-check form-check-flat">
 													<label class="form-check-label">
 														<input class="checkbox" type="checkbox">
-														Travelagent India
+														Clean up cache memory
 													</label>
 												</div>
 												<i class="remove ti-trash"></i>
@@ -252,7 +252,7 @@
 							</div>
             </div>
           </div>
-          <div class="row">
+        <!--  <div class="row">
             <div class="col-md-12 grid-margin stretch-card">
               <div class="card position-relative">
                 <div class="card-body">
@@ -338,11 +338,13 @@
               </div>
             </div>
           </div>
+          -->
         </div>
+        
         <!-- content-wrapper ends -->
         <!-- partial:partials/_footer.html -->
         
-        <app-footer></app-footer>
+        <!--<app-footer></app-footer>-->
       </div>
       <!-- main-panel ends -->
     </div>
