--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -9,14 +9,14 @@
         <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
                 <i class="ti-palette menu-icon"></i>
-                <span class="menu-title">Alumnos</span>
+                <span class="menu-title">Students</span>
                 <i class="menu-arrow"></i>
             </a>
             <div class="collapse" id="ui-basic">
                 <ul class="nav flex-column sub-menu">
-                    <li class="nav-item"> <a routerLink="../alumnos/agregar" class="nav-link" >Agregar</a></li>
-                    <li class="nav-item"> <a routerLink="../alumnos/eliminar" class="nav-link">Eliminar</a></li>
-                    <li class="nav-item"> <a routerLink="../alumnos/mostrar" class="nav-link" >Buscar</a></li>
+                    <li class="nav-item"> <a routerLink="../alumnos/agregar" class="nav-link" >Add</a></li>
+                    <li class="nav-item"> <a routerLink="../alumnos/eliminar" class="nav-link">Delete</a></li>
+                    <li class="nav-item"> <a routerLink="../alumnos/mostrar" class="nav-link" >Search</a></li>
                 </ul>
             </div>
         </li>
@@ -24,18 +24,18 @@
             <a class="nav-link" data-toggle="collapse" href="#ui-basic1" aria-expanded="false"
                 aria-controls="ui-basic1">
                 <i class="ti-layout-list-post menu-icon"></i>
-                <span class="menu-title">Libros</span>
+                <span class="menu-title">Books</span>
                 <i class="menu-arrow"></i>
             </a>
             <div class="collapse" id="ui-basic1">
                 <ul class="nav flex-column sub-menu">
-                    <li class="nav-item"> <a routerLink="../libros/agregar" class="nav-link">Agregar</a></li>
-                    <li class="nav-item"> <a routerLink="../libros/eliminar" class="nav-link">Eliminar</a></li>
-                    <li class="nav-item"> <a routerLink="../libros/mostrar" class="nav-link">Buscar</a></li>
+                    <li class="nav-item"> <a routerLink="../libros/agregar" class="nav-link">Add</a></li>
+                    <li class="nav-item"> <a routerLink="../libros/eliminar" class="nav-link">Delete</a></li>
+                    <li class="nav-item"> <a routerLink="../libros/mostrar" class="nav-link">Search</a></li>
                 </ul>
             </div>
         </li>
-        <li class="nav-item">
+        <!--<li class="nav-item">
             <a class="nav-link" href="pages/charts/chartjs.html">
                 <i class="ti-pie-chart menu-icon"></i>
                 <span class="menu-title">Reportes</span>
@@ -79,3 +79,4 @@
         </li>
     </ul>
 </nav>
+-->
