--- a/src/app/alumnos/crear-alumno/crear-alumno.component.html
+++ b/src/app/alumnos/crear-alumno/crear-alumno.component.html
@@ -1,7 +1,7 @@
 <div class="col-12 grid-margin">
     <div class="card">
         <div class="card-body">
-            <h4 class="card-title">Horizontal Two column</h4>
+            <h4 class="card-title" id="title">Add a new student</h4>
             <form class="form-sample">
                 <p class="card-description">
                     Personal info
@@ -46,8 +46,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group row">
+                    <div class="col-md-12">
+                      <!--  <div class="form-group row">
                             <label class="col-sm-3 col-form-label">Category</label>
                             <div class="col-sm-9">
                                 <select class="form-control">
@@ -58,10 +58,11 @@
                                 </select>
                             </div>
                         </div>
+                        -->
                     </div>
-                    <div class="col-md-6">
+                   <div class="col-md-6">
                         <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Membership</label>
+                            <!--<label class="col-sm-3 col-form-label">Membership</label>
                             <div class="col-sm-4">
                                 <div class="form-check">
                                     <label class="form-check-label">
@@ -71,6 +72,7 @@
                                     </label>
                                 </div>
                             </div>
+              
                             <div class="col-sm-5">
                                 <div class="form-check">
                                     <label class="form-check-label">
@@ -78,8 +80,10 @@
                                             id="membershipRadios2" value="option2">
                                         Professional
                                     </label>
+                                      
                                 </div>
                             </div>
+                            --> 
                         </div>
                     </div>
                 </div>
@@ -89,7 +93,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Address 1</label>
+                            <label class="col-sm-3 col-form-label">Address</label>
                             <div class="col-sm-9">
                                 <input type="text" class="form-control" />
                             </div>
@@ -107,7 +111,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Address 2</label>
+                            <label class="col-sm-3 col-form-label">Career</label>
                             <div class="col-sm-9">
                                 <input type="text" class="form-control" />
                             </div>
