--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
         <li class="nav-item">
             <a class="nav-link" href="index.html">
                 <i class="ti-shield menu-icon"></i>
-                <span class="menu-title">Dashboard</span>
+                <span class="menu-title" id="title">Dashboard</span>
             </a>
         </li>
         <li class="nav-item">
