Add submit button to student add form

--- a/src/app/alumnos/crear-alumno/crear-alumno.component.css
+++ b/src/app/alumnos/crear-alumno/crear-alumno.component.css
@@ -2,3 +2,15 @@
 {
     color: #E85A4F;
 }
+
+.btn-outline-secondary
+{
+    background-color: none;
+    color: black;
+    border: 2px solid  #e98074;
+}
+
+.btn-outline-secondary:hover {
+    background-color: #e98074;
+    color: white;
+}
