--- a/src/app/alumnos/crear-alumno/crear-alumno.component.html
+++ b/src/app/alumnos/crear-alumno/crear-alumno.component.html
@@ -137,14 +137,9 @@
                     </div>
                     <div class="col-md-6">
                         <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Country</label>
+                            <label class="col-sm-3 col-form-label"></label>
                             <div class="col-sm-9">
-                                <select class="form-control">
-                                    <option>America</option>
-                                    <option>Italy</option>
-                                    <option>Russia</option>
-                                    <option>Britain</option>
-                                </select>
+                                <button type="submit" class="btn btn-outline-secondary btn-block" >Add</button>
                             </div>
                         </div>
                     </div>
