Form add student
Campos actualizados y boton agregado

--- a/src/app/alumnos/eliminar-alumno/eliminar-alumno.component.html
+++ b/src/app/alumnos/eliminar-alumno/eliminar-alumno.component.html
@@ -1,10 +1,8 @@
 <div class="col-12 grid-margin stretch-card">
     <div class="card">
       <div class="card-body">
-        <h4 class="card-title">Inline forms</h4>
-        <p class="card-description">
-          Use the <code>.form-inline</code> class to display a series of labels, form controls, and buttons on a single horizontal row
-        </p>
+        <h4 class="card-title">Delete a student</h4>
+        
         <form class="form-inline">
           <label class="sr-only" for="inlineFormInputName2">Name</label>
           <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Jane Doe">
