--- a/src/app/alumnos/crear-alumno/crear-alumno.component.html
+++ b/src/app/alumnos/crear-alumno/crear-alumno.component.html
@@ -9,7 +9,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">First Name</label>
+                            <label class="col-sm-3 col-form-label">Code</label>
                             <div class="col-sm-9">
                                 <input type="text" class="form-control" />
                             </div>
@@ -17,7 +17,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Last Name</label>
+                            <label class="col-sm-3 col-form-label">Full Name</label>
                             <div class="col-sm-9">
                                 <input type="text" class="form-control" />
                             </div>
@@ -27,20 +27,20 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Gender</label>
+                            <label class="col-sm-3 col-form-label">Status</label>
                             <div class="col-sm-9">
                                 <select class="form-control">
-                                    <option>Male</option>
-                                    <option>Female</option>
+                                    <option>Active</option>
+                                    <option>No regular</option>
                                 </select>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Date of Birth</label>
+                            <label class="col-sm-3 col-form-label">E-mail</label>
                             <div class="col-sm-9">
-                                <input class="form-control" placeholder="dd/mm/yyyy" />
+                                <input class="form-control"  />
                             </div>
                         </div>
                     </div>
@@ -87,13 +87,11 @@
                         </div>
                     </div>
                 </div>
-                <p class="card-description">
-                    Address
-                </p>
+                
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Address</label>
+                            <label class="col-sm-3 col-form-label">Adress</label>
                             <div class="col-sm-9">
                                 <input type="text" class="form-control" />
                             </div>
@@ -101,7 +99,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">State</label>
+                            <label class="col-sm-3 col-form-label">Phone</label>
                             <div class="col-sm-9">
                                 <input type="text" class="form-control" />
                             </div>
@@ -111,25 +109,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Career</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" />
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Postcode</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">City</label>
+                            <label class="col-sm-3 col-form-label">Password</label>
                             <div class="col-sm-9">
                                 <input type="text" class="form-control" />
                             </div>
@@ -144,6 +124,7 @@
                         </div>
                     </div>
                 </div>
+                
             </form>
         </div>
     </div>
