--- a/src/app/alumnos/eliminar-alumno/eliminar-alumno.component.html
+++ b/src/app/alumnos/eliminar-alumno/eliminar-alumno.component.html
@@ -2,26 +2,20 @@
     <div class="card">
       <div class="card-body">
         <h4 class="card-title">Delete a student</h4>
-        
-        <form class="form-inline">
-          <label class="sr-only" for="inlineFormInputName2">Name</label>
-          <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Jane Doe">
-        
-          <label class="sr-only" for="inlineFormInputGroupUsername2">Username</label>
-          <div class="input-group mb-2 mr-sm-2">
-            <div class="input-group-prepend">
-              <div class="input-group-text">@</div>
+        <div class="row">
+            <div class="col-md-4">
+                    <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Code">
             </div>
-            <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Username">
-          </div>
-          <div class="form-check mx-sm-2">
-            <label class="form-check-label">
-              <input type="checkbox" class="form-check-input" checked>
-              Remember me
-            </label>
-          </div>
-          <button type="submit" class="btn btn-primary mb-2">Submit</button>
-        </form>
+            <div class="col-md-4">
+            </div>
+            <div class="col-md-4">
+                    <button type="submit" class="btn btn-outline-secondary btn-block" >Delete</button>
+              
+            </div>
+            
       </div>
     </div>
   </div>
+
+  
+</div>
