--- a/src/app/alumnos/listar-alumnos/listar-alumnos.component.html
+++ b/src/app/alumnos/listar-alumnos/listar-alumnos.component.html
@@ -1,7 +1,7 @@
 <div class="col-lg-12 grid-margin stretch-card">
     <div class="card">
       <div class="card-body">
-        <h4 class="card-title">Listado de Clientes</h4>
+        <h4 class="card-title">Students</h4>
         <div class="table-responsive">
           <table class="table table-hover">
             <thead>
