--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -50,6 +50,21 @@
                 </ul>
             </div>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" data-toggle="collapse" href="#ui-basic3" aria-expanded="false"
+                aria-controls="ui-basic3">
+                <i class="ti-layout-list-post menu-icon"></i>
+                <span class="menu-title">Reservations</span>
+                <i class="menu-arrow"></i>
+            </a>
+            <div class="collapse" id="ui-basic3">
+                <ul class="nav flex-column sub-menu">
+                    <li class="nav-item"> <a routerLink="../reservaciones/agregar" class="nav-link">Add</a></li>
+                    <li class="nav-item"> <a routerLink="../reservaciones/eliminar" class="nav-link">Delete</a></li>
+                    <li class="nav-item"> <a routerLink="../reservaciones/mostrar" class="nav-link">Search</a></li>
+                </ul>
+            </div>
+        </li>
         <!--<li class="nav-item">
             <a class="nav-link" href="pages/charts/chartjs.html">
                 <i class="ti-pie-chart menu-icon"></i>
